overlay/prometheus/ingress-http/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: prometheus-cluster-auth
  namespace: prometheus
  labels:
    #@yaml/text-templated-strings
    (@= data.values.domain @)/loadbalancer: default
spec:
  basicAuth:
    realm: "prometheus cluster"
    secret: prometheus-cluster
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-cluster
  namespace: prometheus
  labels:
    #@yaml/text-templated-strings
    (@= data.values.domain @)/loadbalancer: default
spec:
  entryPoints:
  - http
  routes:
  - match: #@ "Host(`{}.{}`)".format(data.values.prometheus.dns.name, data.values.domain)
    kind: Rule
    priority: 12
    services:
    - name: prometheus-operated
      port: 9090
      strategy: RoundRobin
    middlewares:
    - name: prometheus-cluster-auth
